fixed menu shift

--- a/app/static/carousel-app/carousel.css
+++ b/app/static/carousel-app/carousel.css
@@ -20,6 +20,7 @@
 	padding: 10px 0 10px 0;
 	text-align: center;
 	bottom: 1em;
+	margin: 0;
 	width: inherit;
 	font-size: 30px;
 	color: #fff;
