--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -68,9 +68,48 @@ body {
   margin: 0 auto;
 }
 
+/* 
+  Added fixed heights for cards for now since the cards do not have content
+  The cards will need to have some sort of fixed height and width in the end
+  to normalize content --DS
+*/
+.card {
+  margin: 5px 0;
+  display: inline-block;
+  border-radius: 7px;
+} 
+
+.news-card {
+  width: 100%;
+  height: 400px;
+}
+
+.alert-card {
+  background-color: lightgrey;
+  width: 66%;
+  height: 300px;
+  float: left;
+  overflow: auto;
+}
+
+.sidebar-card {
+  background-color: #94C8D9;
+  width: 33%;
+  height: 300px;
+  float: right;
+  overflow: auto;
+}
+
+@media screen and (min-width: 830px){
+  #content{
+    padding: 0 10px;
+  }
+}
+
 @media screen and (min-width: 781px){
   #content-wrapper{
     left: 0 !important;
+    right: 0 !important;
   }
 }
 
@@ -90,7 +129,7 @@ body {
   }
 
   #nav-wrapper{
-    width: 160px;
+    width: 200px;
     min-width: 0;
     height: auto;
     position: absolute;
@@ -104,38 +143,6 @@ body {
     z-index: 2;
     background: #fff;
   }
-}
-
-/* 
-  Added fixed heights for cards for now since the cards do not have content
-  The cards will need to have some sort of fixed height and width in the end
-  to normalize content --DS
-*/
-.card {
-  background-color: lightgrey;
-  margin-top: 5px;
-  margin-bottom: 2px;
-  display: inline-block;
-  border-radius: 2px;
-} 
-
-.news-card {
-  width: 100%;
-  height: 400px;
-}
-
-.alert-card {
-  width: 66%;
-  height: 300px;
-  float: left;
-  overflow: auto;
-}
-
-.sidebar-card {
-  width: 33%;
-  height: 300px;
-  float: right;
-  overflow: auto;
 }
 
 #sidebar {
